<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPS Locator</string>
    <string name="button0">Point The Way</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="baseAzimuth">Base Azimuth</string>
    <string name="relativeAzimuth">Relative Azimuth</string>
    <string name="finalAzimuth">Final Azimuth</string>
    <string name="parseError">Could not parse a coordinate, try again</string>
</resources>
