<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/baseFrame">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:text="@string/baseAzimuth"
            android:id="@+id/baseAzimuthView"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.21"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:text="@string/finalAzimuth"
            android:id="@+id/finalAzimuthView"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.21"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:text="@string/relativeAzimuth"
            android:id="@+id/relativeAzimuthView"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.21"/>
    </LinearLayout>
</FrameLayout>